<resources>
    <string name="app_name">Medicine Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="select_the_item">Select The Item</string>
    <string name="about_us">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sit dis sit diam nisl, tristique facilisis blandit sollicitudin.
        Nunc vel fringilla metus, vitae. Lacus sit massa consequat, cursus magna amet volutpat. In faucibus aenean varius sed nulla ipsum dignissim.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sit dis sit diam nisl, tristique facilisis blandit sollicitudin.
        Nunc vel fringilla metus, vitae. Lacus sit massa consequat, cursus magna amet volutpat. In faucibus aenean varius sed nulla ipsum dignissim.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sit dis sit diam nisl, tristique facilisis blandit sollicitudin.
        Nunc vel fringilla metus, vitae. Lacus sit massa consequat, cursus magna amet volutpat. In faucibus aenean varius sed nulla ipsum dignissim.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sit dis sit diam nisl, tristique facilisis blandit sollicitudin.
        Nunc vel fringilla metus, vitae. Lacus sit massa consequat, cursus magna amet volutpat. In faucibus aenean varius sed nulla ipsum dignissim.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sit dis sit diam nisl, tristique facilisis blandit sollicitudin.
        Nunc vel fringilla metus, vitae. Lacus sit massa consequat, cursus magna amet volutpat. In faucibus aenean varius sed nulla ipsum dignissim.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sit dis sit diam nisl, tristique facilisis blandit sollicitudin.
        Nunc vel fringilla metus, vitae. Lacus sit massa consequat, cursus magna amet volutpat. In faucibus aenean varius sed nulla ipsum dignissim.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sit dis sit diam nisl, tristique facilisis blandit sollicitudin.
        Nunc vel fringilla metus, vitae. Lacus sit massa consequat, cursus magna amet volutpat. In faucibus aenean varius sed nulla ipsum dignissim.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sit dis sit diam nisl, tristique facilisis blandit sollicitudin.
        Nunc vel fringilla metus, vitae. Lacus sit massa consequat, cursus magna amet volutpat. In faucibus aenean varius sed nulla ipsum dignissim.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sit dis sit diam nisl, tristique facilisis blandit sollicitudin.
        Nunc vel fringilla metus, vitae. Lacus sit massa consequat, cursus magna amet volutpat. In faucibus aenean varius sed nulla ipsum dignissim.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pharetra sit dis sit diam nisl, tristique facilisis blandit sollicitudin.
        Nunc vel fringilla metus, vitae. Lacus sit massa consequat, cursus magna amet volutpat. In faucibus aenean varius sed nulla ipsum dignissim.</string>
    <string name="add_medicine_boarding_page_guideline">ঔষুধ গ্রহণের সতর্কবাণী পেতে আপনার প্রথম ঔষধ যুক্ত করুন</string>
    <string name="add_medicine_boarding_page_button_text">ঔষুধ যুক্ত করুন</string>
    <string name="add_new_medicine_textview_text">নতুন ঔষধ সংযুক্ত করুন</string>
    <string name="medicine_category">ঔষধের প্রকারভেদ</string>
    <string name="name_of_the_medicine">ঔষধের নাম</string>
    <string name="mwdicine_color_textview_text">কালার</string>
    <string name="add_medicine_step_one_next_button_text">পরবর্তী</string>
    <string name="add_dose_buttonText">ডোজ +</string>
    <string name="mg">মিলিগ্রাম (mg)</string>
    <string name="starting_date_of_taking_medicine">শুরুর তারিখ</string>
    <string name="ending_date_of_taking_medicine">শেষের তারিখ</string>
    <string name="duration_of_taking_medicine">সময়কাল</string>
    <string name="frequencyofTakingMedicine">ফ্রিকোয়েন্সি</string>
    <string name="everyDay_radioButtonText">প্রতিদিন</string>
    <string name="afterSevenDaysRadioButtonText">প্রতি ৭ দিন পর পর</string>
    <string name="specificDayRadioButtonText">নির্দিষ্ট দিনে</string>
    <string name="numberOfMedicine_textViewText">ঔষধের পরিমান</string>
    <string name="numberOfMedicineBought_textViewText">মক্রয়কৃত ঔষধের পরিমান</string>
    <string name="needRoBuyMedicine_textViewText">মঔষধ ক্রয় করতে হবে</string>
    <string name="setAlarmToBuyMedicine_textViewText">ঔষধ মজুদকরণ সতর্কীবার্তা</string>
    <string name="forgot_password">পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="toGetOTPhint">আপনার ইমেইল বা ফোন নম্বর লিখুন আমরা আপনার পাসওয়ার্ড রিসেট করার জন্য আপনাকে 6 ডিজিটের একটি OTP নম্বর পাঠাবো</string>
    <string name="forgotPasswordEditText_hint">ফোন নম্বর</string>
    <string name="forgotPasswordPageButtonText">সাবমিট করুন</string>
    <string name="forgotPasswordPage_backArrow_textViewText">লগইন পেজে যান</string>
    <string name="logIn_textViewText">লগ ইন করুন</string>
    <string name="loginPhoneNumber_hintText">ফোন নম্বর</string>
    <string name="loginPassword_hintText">পাসওয়ার্ড</string>
    <string name="signIn_buttonText">সাইন ইন</string>
    <string name="or">অথবা</string>
    <string name="no_account">একাউন্ট নেই?</string>
    <string name="do_signUp">সাইন আপ করুন</string>
    <string name="skip_buttonText">শুরু করুন</string>
    <string name="verifyOTP_textViewText">ওটিপি যাচাই</string>
    <string name="otpSent_hint">আপনার ফোন নম্বরে 6 ডিজিটের কোড পাঠিয়েছি।</string>
    <string name="didnot_get_otp">ওটিপি পাননি?</string>
    <string name="sentAgainOtp_textViewText">আবার পাঠান 0:59</string>
    <string name="otpVerification_buttonText">যাচাই করুন</string>
    <string name="appNameInBangla_MediHelp">মেডি হেল্প</string>
    <string name="create_account_textViewText">একাউন্ট তৈরী করুন</string>
    <string name="createAccount_namehint">আপনার নাম *</string>
    <string name="createAccount_phoneHint">ফোন নম্বর *</string>
    <string name="createAccount_passwordHint">পাসওয়ার্ড</string>
    <string name="createAccount_confPasshint">পাসওয়ার্ড নিশ্চিত করুন</string>
    <string name="signUp_buttonText">সাইন আপ</string>
    <string name="have_account">একাউন্ট আছে?</string>
    <string name="doSignIn">সাইন ইন করুন</string>
    <string name="addReportDialog_headlineText">রক্তচাপ এবং সময় সেট করুন</string>
    <string name="appointmentDeleteDialog_headlineText">আপনি কি নিশ্চিত অ্যাপয়েন্টমেন্টটি মুছে ফেলতে চান?</string>
    <string name="drawerHeaderProfileNameText">Md Aminul Islam</string>
    <string name="drawerHeaderProfileEmailText">shaheenmirja143@gmail.com</string>
    <string name="settingsText_fromSettingsPage">সেটিংস</string>
    <string name="accountText_from_settingsPage">একাউন্ট</string>
    <string name="editProfileTextViewText">এডিট প্রোফাইল</string>
    <string name="changePasswordTextViewText_from_SettingsPage">চেঞ্জ পাসওয়ার্ড</string>
    <string name="facebook_from_settingsPage">ফেইসবুক</string>
    <string name="notificationsText_from_settingsPage">নোটিফিকেশন্স</string>
    <string name="notificationToggleButtonText_from_settingsPage">App নোটিফিকেশন্স</string>
    <string name="vibrationToggleButtonText_from_settingsPage">ভাইব্রেশন</string>
    <string name="likeOurFacebookPageText">ফেইসবুক পেজটি লাইক করুন</string>
    <string name="shareOurAppText_from_settingsPage">শেয়ার app</string>
    <string name="logoutText">লগ আউট</string>
    <string name="contractUs">যোগাযোগ করুন</string>
    <string name="medical_appointment">মেডিকেল এপয়েন্টমেন্ট</string>
    <string name="medical_appointment_nameHint">নাম</string>
    <string name="medicalAppointment_centerHint">কেন্দ্র</string>
    <string name="dateOfAppointment">এপয়েন্টমেন্ট তারিখ</string>
    <string name="appointmentAlarm">এপয়েন্টমেন্ট সতর্কবাণী</string>
    <string name="saveButtonText">সেভ</string>
    <string name="submitButtonText">সাবমিট</string>
    <string name="curentPassword_hint">বর্তমান পাসওয়ার্ড</string>
    <string name="newPassword_hint">নতুন পাসওয়ার্ড</string>
    <string name="confNewPass_hint">কন্ফার্ম নতুন পাসওয়ার্ড</string>
    <string name="email_hint">ইমেইল</string>
    <string name="details_hint">বর্ণনা</string>
    <string name="sentButtonText">পাঠান</string>


    <string-array name="add_medicine_spinner_item">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="days_ot_months_or_years">
        <item>দিন</item>
        <item>মাস</item>
        <item>বছর</item>

    </string-array>

</resources>