<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_screen"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:padding="10dp"
        android:text="@string/appNameInBangla_MediHelp"
        android:textColor="@color/white"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@drawable/login_background"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="343dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:text="@string/logIn_textViewText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTextETLayoutId"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="25dp"
                android:inputType="textPersonName"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/phoneEmailEtId"
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_shape__white_and_lessradious"
                    android:hint="@string/loginPhoneNumber_hintText"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passTextETLayoutId"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:elevation="25dp"
                android:inputType="textPersonName"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:passwordToggleEnabled="true"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/passEmailEtId"
                    android:layout_width="343dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_shape__white_and_lessradious"
                    android:hint="@string/loginPassword_hintText"
                    android:inputType="textPassword"
                    tools:ignore="TextFields" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPasswordTVId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/forgot_password"
                android:textColor="#7A7575" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signInButtonId"
                android:layout_width="130dp"
                android:layout_height="41dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_shape_with_background_color"
                android:text="@string/signIn_buttonText"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewNext" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/or" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/fb" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/google_icon" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/tweeter" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/no_account" />

                <TextView
                    android:id="@+id/signUpKorunTVId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:clickable="true"
                    android:text="@string/do_signUp"
                    android:textColor="@color/custom_promary_color" />


            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>