<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forgor_password_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/forgot_password"
        android:textSize="24sp"
        android:textColor="@color/custom_promary_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:textSize="10sp"
        android:text="@string/toGetOTPhint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <LinearLayout
        android:id="@+id/linearLayoutId"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="13dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/phone_icon" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneTextETLayoutId"
                android:layout_width="250dp"
                android:layout_height="25dp"
                app:boxStrokeWidth="0dp"
                android:inputType="number"
                app:boxStrokeWidthFocused="0dp">

                <EditText
                    android:id="@+id/phoneEmailEtId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/forgotPasswordEditText_hint"
                    android:textSize="12sp"
                    android:background="@color/white"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray"
            android:layout_marginTop="2dp"/>




    </LinearLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/skipButtonId"
        android:layout_width="161dp"
        android:layout_height="51dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_shape_with_background_color"
        android:text="@string/forgotPasswordPageButtonText"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutId" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/skipButtonId">

        <ImageView
            android:id="@+id/backToLoginImgId"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:paddingEnd="5dp"
            android:layout_gravity="center"
            android:src="@drawable/back_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/forgotPasswordPage_backArrow_textViewText"
            android:textSize="10sp"
            android:focusable="true" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>